@@ -1,35 +1,13 @@
+% $Id$
 % Compile 3 times: latex tex4ht-html4
-%             or   xhlatex tex4ht-html4 "html,3,sections+"
+%           or   xhlatex tex4ht-html4 "html,3,sections+"
 % Copy html.4ht into the work directory before each of the 
 %            first two compilations
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-html4.tex                                       %
-% Copyright (C) 1996--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
-
-
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1996--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \ifx \HTML\UnDef
    \def\HTML{html4,html4-math,html4-uni} 
@@ -40,31 +18,9 @@
    \expandafter\next
 \fi
 
-
-
-%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%
-
-\let\AltxModifyShowCode=\ModifyShowCode
-\def\ModifyShowCode{%
-   \def\by{by}\def\={=}\AltxModifyShowCode}
-\let\pReModifyOutputCode=\ModifyOutputCode
-\def\ModifyOutputCode{%
-   \def\by{}\def\={}%
-   \pReModifyOutputCode}
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
+\input{common-code}
+\input{common}
+\input{tex4ht-cpright}
 
 \def\.{\string\a:mathml:\space}
 
@@ -110,20 +66,19 @@
 
 
 \<html4\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% html4.4ht                             |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% html4.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.1997. Eitan M. Gurari
+|<TeX4ht copywrite|>
 >>>
 
 
 \<html4-math\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% html4-math.4ht                        |version %
-% Copyright (C) |CopyYear.1999.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% html4-math.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.1999. Eitan M. Gurari
+|<TeX4ht copywrite|>
 >>>
-
 
 
 
@@ -309,7 +264,7 @@ a poackage option. It takes precedence over \verb'\A:charset'.
 
 Don't place the full address
  \''http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd' 
-within DOCTYPE. It can stop tools like xt when the serves doen't respond
+within DOCTYPE. It can stop tools like xt when the server doesn't respond
 
 
 \<xhtml dtd\><<<
@@ -6968,10 +6923,10 @@ is reported in Overlib's page).
 \ifnum\the\catcode`\%=14\else\expandafter\edef\csname
   \string:RestoreCatcodes\endcsname{\catcode`\%|=\the
   \catcode`\%}\catcode`\%|=14\fi
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% onmouseover.4ht                       |version %
-% Copyright (C) |CopyYear.2001.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% onmouseover.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.2001. Eitan M. Gurari
+|<TeX4ht copywrite|>
 
 \hbadness=10000 \vbadness=10000 \hfuzz=99in \vfuzz=\hfuzz
 \overfullrule=0pt   \let\makefootline\empty
@@ -20079,11 +20034,10 @@ The \verb'size="1"' makes the select a popout memnu
 
 
 \<exerqz\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% exerqz.4ht                            |version %
-% Copyright (C) |CopyYear.1999.                          %
-%                      Donald P. Story & Eitan M. Gurari %
-|<TeX4ht copyright|>
+% exerqz.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.1999. Eitan M. Gurari, Donald P. Story
+|<TeX4ht copywrite|>
 |<exerqz's vars|>
 |<predefined exerquiz javascript|>
 >>>
@@ -21664,32 +21618,6 @@ them in the same row.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Shared}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\<TeX4ht copyright\><<<
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version |version}
->>>
 \<par del\><<<
 !*?: >>>
 \<tag of Tag\><<<
@@ -21701,13 +21629,6 @@ tail>>>
 \<addr for Tag and Ref of Sec\><<<
 \xdef\:cursec{|<section html addr|>}%
 >>>
-
-
-
-
-
-
-
 
 
  \OutputCode[4ht]\<exerqz\>
